--- a/apps/server/backend/afinitly-api-gateway/project.json
+++ b/apps/server/backend/afinitly-api-gateway/project.json
@@ -51,13 +51,11 @@
 			"defaultConfiguration": "development",
 			"dependsOn": [
 				"build",
-				"afinitly-auth-service:serve",
 				"afinitly-auth-service:serve"
 			],
 			"options": {
 				"buildTarget": "afinitly-api-gateway:build",
-				"runBuildTargetDependencies": false,
-				"proxyConfig": "apps/server/backend/afinitly-api-gateway/proxy.conf.json"
+				"runBuildTargetDependencies": false
 			},
 			"configurations": {
 				"development": {
