--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
           filter: tree:0
           fetch-depth: 0
 
+      - run: npx nx start-ci-run
+
       # Cache node_modules
       - uses: actions/setup-node@v4
         with:
