feat: refactor environment variable handling across services
- Updated global setup and teardown scripts to utilize SERVICE_PORT and SERVICE_HOST environment variables.
- Introduced setupEnvironment function to load environment variables from .env files in both API gateway and auth service.
- Enhanced error handling for missing environment variables.
- Modified main application entry points to validate and use SERVICE_PORT and SERVICE_HOST.
- Added new scripts for syncing Angular dev server ports and generating environment files based on configuration.
- Created a new library for managing port configurations and environment files.
- Implemented Docker Compose configuration for PostgreSQL database in auth service.
- Updated project.json files to include new build dependencies and configurations.
- Added environment configuration files for web user application.
- Introduced scripts for generating and purging environment files based on port configurations.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,58 +2,13 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"name": "Nx Serve All",
 			"type": "node",
 			"request": "launch",
-			"name": "Debug afinitly-api-gateway with Nx",
 			"runtimeExecutable": "npx",
-			"runtimeArgs": ["nx", "serve", "afinitly-api-gateway"],
-			"env": {
-				"NODE_OPTIONS": "--inspect=9229"
-			},
-			"console": "integratedTerminal",
-			"internalConsoleOptions": "neverOpen",
-			"skipFiles": ["<node_internals>/**"],
-			"sourceMaps": true,
-			"outFiles": [
-				"${workspaceFolder}/apps/server/backend/afinitly-api-gateway/dist/**/*.(m|c|)js",
-				"!**/node_modules/**"
-			]
-		},
-		{
-			"type": "node",
-			"request": "launch",
-			"name": "Debug afinitly-auth-service with Nx",
-			"runtimeExecutable": "npx",
-			"runtimeArgs": ["nx", "serve", "afinitly-auth-service"],
-			"env": {
-				"NODE_OPTIONS": "--inspect=9230"
-			},
-			"console": "integratedTerminal",
-			"internalConsoleOptions": "neverOpen",
-			"skipFiles": ["<node_internals>/**"],
-			"sourceMaps": true,
-			"outFiles": [
-				"${workspaceFolder}/apps/backend/afinitly-auth-service/dist/**/*.(m|c|)js",
-				"!**/node_modules/**"
-			]
-		},
-		{
-			"type": "node",
-			"request": "launch",
-			"name": "Debug afinitly-auth-service with Nx",
-			"runtimeExecutable": "npx",
-			"runtimeArgs": ["nx", "serve", "afinitly-auth-service"],
-			"env": {
-				"NODE_OPTIONS": "--inspect=9231"
-			},
-			"console": "integratedTerminal",
-			"internalConsoleOptions": "neverOpen",
-			"skipFiles": ["<node_internals>/**"],
-			"sourceMaps": true,
-			"outFiles": [
-				"${workspaceFolder}/apps/server/backend/afinitly-auth-service/dist/**/*.(m|c|)js",
-				"!**/node_modules/**"
-			]
+			"args": ["nx", "run-many", "--target=serve"],
+			"cwd": "${workspaceFolder}",
+			"console": "integratedTerminal"
 		}
 	]
 }
