--- a/tools/generate-ports/package.json
+++ b/tools/generate-ports/package.json
@@ -7,7 +7,9 @@
 	"types": "./src/index.d.ts",
 	"dependencies": {
 		"tslib": "^2.3.0",
-		"dotenv": "^16.0.3",
-		"dotenv-expand": "^5.1.0"
+		"dotenv": "^16.4.7",
+		"dotenv-expand": "^11.0.7",
+		"@nestjs/common": "^9.0.0",
+		"@nx/dependency-checks": "workspace:*"
 	}
 }
