--- a/apps/views/web/afinitly-web-user/project.json
+++ b/apps/views/web/afinitly-web-user/project.json
@@ -10,7 +10,10 @@
 			"executor": "nx:run-commands",
 			"options": {
 				"command": "node apps/views/web/afinitly-web-user/src/sync-angular-port.js"
-			}
+			},
+			"dependsOn": [
+				"generate-envs"
+			]
 		},
 		"generate-envs": {
 			"executor": "nx:run-commands",
@@ -33,7 +36,6 @@
 		"build": {
 			"executor": "@angular/build:application",
 			"dependsOn": [
-				"generate-envs",
 				"sync-angular-ports"
 			],
 			"outputs": [
